[project]
name = "beancount-importer"
version = "0.2.1"
description = "Various beancount importers"
requires-python = ">=3.11,<4.0"
license = { text = "MIT" }
readme = "README.rst"

authors = [
    { name = "Kevin James", email = "beancount-importer@thekev.in>" },
]

dependencies = [
    "beancount==3.1.0",
    "beangulp==0.2.0",
    "openpyxl==3.1.5",
    "py-pdf-parser==0.13.0",
    "python-dateutil==2.9.0.post0",
    "sh==2.2.1",
    "titlecase==2.4.1",
]

[project.urls]
repository = "https://github.com/TheKevJames/beancount-importer"

[tool.poetry]
requires-poetry = ">=2.0"
package-mode = true
packages = [
    { include = "beancount_importer", format = ["sdist", "wheel"] },
]

[tool.poetry.scripts]
bean-import = "beancount_importer.cli:run"

[[tool.mypy.overrides]]
module = [
    'beancount.core.*',
    'py_pdf_parser.*',
    'sh.*',
    'titlecase.*',
]
ignore_missing_imports = true

[[tool.poetry.source]]
name = "pypi"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
